--- a/public/tpl.manifest.json
+++ b/public/tpl.manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Safebit",
-  "name": "Safebit",
+  "short_name": "Cryptoprint",
+  "name": "Cryptoprint",
   "icons": [
     {
       "src": "/images/app-icon/icon-prod-alt.png",
