--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 REACT_APP_FIREBASE_API_KEY=AIzaSyAP0tT9E_Gq41179lLa366th4g3WUDKEP0
-REACT_APP_FIREBASE_AUTH_DOMAIN=safebit-dev.firebaseapp.com
-REACT_APP_FIREBASE_DATABASE_URL=https://safebit-dev.firebaseio.com
-REACT_APP_FIREBASE_PROJECT_ID=safebit-dev
-REACT_APP_FIREBASE_STORAGE_BUCKET=safebit-dev.appspot.com
+REACT_APP_FIREBASE_AUTH_DOMAIN=cryptoprint-dev.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://cryptoprint-dev.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=cryptoprint-dev
+REACT_APP_FIREBASE_STORAGE_BUCKET=cryptoprint-dev.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=683619072613
 
 REACT_APP_GOOGLE_WEB_CLIENT_ID=683619072613-r6rc313cutrl0fg9vu918t3j03aru1nf.apps.googleusercontent.com
