--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,12 @@
-REACT_APP_FIREBASE_API_KEY=NOT_SET
-REACT_APP_FIREBASE_AUTH_DOMAIN=NOT_SET
-REACT_APP_FIREBASE_DATABASE_URL=NOT_SET
-REACT_APP_FIREBASE_PROJECT_ID=NOT_SET
-REACT_APP_FIREBASE_STORAGE_BUCKET=NOT_SET
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=NOT_SET
+REACT_APP_FIREBASE_API_KEY=AIzaSyAP0tT9E_Gq41179lLa366th4g3WUDKEP0
+REACT_APP_FIREBASE_AUTH_DOMAIN=safebit-dev.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://safebit-dev.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=safebit-dev
+REACT_APP_FIREBASE_STORAGE_BUCKET=safebit-dev.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=683619072613
+
+REACT_APP_GOOGLE_WEB_CLIENT_ID=683619072613-r6rc313cutrl0fg9vu918t3j03aru1nf.apps.googleusercontent.com
+REACT_APP_GOOGLE_WEB_SECRET=Iw65LozjrXIh_i_DTmY9e8b7
 
 REACT_APP_GOOGLE_ANALYTICS=NOT_SET
 
