--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "bigi": "^1.4.2",
+    "bitcoinjs-lib": "^3.3.1",
     "firebase": "^4.2.0",
     "keen-tracking": "^1.1.4",
     "localforage": "^1.5.0",
