--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bigi": "^1.4.2",
     "bitcoinjs-lib": "^3.3.1",
+    "cheerio": "^1.0.0-rc.2",
     "firebase": "^4.2.0",
     "keen-tracking": "^1.1.4",
     "localforage": "^1.5.0",
