--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "bigi": "^1.4.2",
-    "bitcoinjs-lib": "^3.3.1",
+    "bitcore-lib": "^0.15.0",
     "cheerio": "^1.0.0-rc.2",
     "firebase": "^4.2.0",
     "keen-tracking": "^1.1.4",
