--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux-firebase": "^2.0.0-beta.17",
     "react-router": "^3.0.0",
     "react-scripts": "1.0.11",
+    "react-scroll": "^1.6.7",
     "react-slick": "^0.15.4",
     "reactour": "^1.4.1",
     "redux": "^3.7.2",
