--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bitcore-lib": "^0.15.0",
     "cheerio": "^1.0.0-rc.2",
     "firebase": "^4.2.0",
+    "jsbarcode": "^3.8.0",
     "keen-tracking": "^1.1.4",
     "localforage": "^1.5.0",
     "marked": "^0.3.6",
@@ -34,7 +35,8 @@
     "redux-thunk": "^2.2.0",
     "slick-carousel": "^1.8.1",
     "sync-exec": "^0.6.2",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "xmldom": "^0.1.27"
   },
   "scripts": {
     "build-css": "cross-env NODE_PATH=src/modules/ node-sass src/ -o src/",
