--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
     "start": "cross-env node prebuild.js && cross-env NODE_PATH=src/modules/ npm-run-all -p watch-css start-js",
     "build": "cross-env node prebuild.js && cross-env NODE_PATH=src/modules/ npm run build-css && react-scripts build",
     "test": "cross-env NODE_PATH=src/modules/ react-scripts test --env=jsdom",
-    "eject": "cross-env react-scripts eject"
+    "eject": "cross-env react-scripts eject",
+    "print": "cross-env NODE_PATH=src/modules/ babel-node src/modules/printer --presets es2015,stage-2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.1",
     "eslint": "^4.4.1",
     "eslint-config-react-app": "^2.0.0",
