--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bitcore-lib": "^0.15.0",
     "cheerio": "^1.0.0-rc.2",
     "firebase": "^4.2.0",
+    "get-random-values": "^1.2.0",
     "jsbarcode": "^3.8.0",
     "keen-tracking": "^1.1.4",
     "localforage": "^1.5.0",
