fix env settings

--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,12 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyAP0tT9E_Gq41179lLa366th4g3WUDKEP0
-REACT_APP_FIREBASE_AUTH_DOMAIN=safebit-dev.firebaseapp.com
-REACT_APP_FIREBASE_DATABASE_URL=https://safebit-dev.firebaseio.com
-REACT_APP_FIREBASE_PROJECT_ID=safebit-dev
-REACT_APP_FIREBASE_STORAGE_BUCKET=safebit-dev.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=683619072613
+REACT_APP_FIREBASE_API_KEY=AIzaSyD2b4GVkzM1CH62cV1zQioiFZWcX6WBsV8
+REACT_APP_FIREBASE_AUTH_DOMAIN=cryptoprint-x01.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://cryptoprint-x01.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=cryptoprint-x01
+REACT_APP_FIREBASE_STORAGE_BUCKET=cryptoprint-x01.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=927387483872
 
-REACT_APP_GOOGLE_WEB_CLIENT_ID=683619072613-r6rc313cutrl0fg9vu918t3j03aru1nf.apps.googleusercontent.com
-REACT_APP_GOOGLE_WEB_SECRET=Iw65LozjrXIh_i_DTmY9e8b7
+REACT_APP_GOOGLE_WEB_CLIENT_ID=927387483872-sagbqcd6pumra8fkt5ik8hgitjvm5lnp.apps.googleusercontent.com
+REACT_APP_GOOGLE_WEB_SECRET=UAtbDeof8dgt38e45HNwPg1p
 
 REACT_APP_GOOGLE_ANALYTICS=UA-110881511-1
 
